--- a/build.xml
+++ b/build.xml
@@ -14,7 +14,7 @@
         <delete dir="${build.dir}"/>
     </target>
 
-    <target name="compile">
+    <target name="compiles">
         <mkdir dir="${classes.dir}"/>
         <javac srcdir="${src.dir}" destdir="${classes.dir}"/>
     </target>
