--- a/build.xml
+++ b/build.xml
@@ -14,12 +14,12 @@
         <delete dir="${build.dir}"/>
     </target>
 
-    <target name="compile">
+    <target name="compiles">
         <mkdir dir="${classes.dir}"/>
         <javac srcdir="${src.dir}" destdir="${classes.dir}"/>
     </target>
 
-    <target name="jar" depends="compile">
+    <target name="jar" depends="compiles">
         <mkdir dir="${jar.dir}"/>
         <jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
             <manifest>
